--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+body { font: 12px Arial;}
 
- body { font: 12px Arial;}
+path {
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+}
 
- path {
-   stroke: steelblue;
-   stroke-width: 2;
-   fill: none;
- }
-
- .axis path,
- .axis line {
-   fill: none;
-   stroke: grey;
-   stroke-width: 1;
-   shape-rendering: crispEdges;
- }
-
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
 </style>
 <body>
 
@@ -30,12 +28,17 @@
    width = 600 - margin.left - margin.right,
    height = 270 - margin.top - margin.bottom;
 
-   // Parse the date / time
-   var parseDate = d3.time.format("%Y").parse;
-
    // Set the ranges
-   var x = d3.time.scale().range([0, width]);
+   var x = d3.scale.linear().range([0, width]);
    var y = d3.scale.linear().range([height, 0]);
+   var data = [
+     { x: 1, y: 10 },
+     { x: 2, y: 15 },
+     { x: 3, y: -10 },
+     { x: 4, y: 7 },
+     { x: 5, y: 21 },
+     { x: 6, y: -1 }
+   ];
 
    // Define the axes
    var xAxis = d3.svg.axis().scale(x)
@@ -44,10 +47,9 @@
    var yAxis = d3.svg.axis().scale(y)
                      .orient("left").ticks(5);
 
-   // Define the line
    var valueline = d3.svg.line()
-                         .x(function(d) { return x(d.Year); })
-                         .y(function(d) { return y(d.Glob); });
+    .x(function(d) { return x(d.x); })
+    .y(function(d) { return y(d.y); });
 
    // Adds the svg canvas
    var svg = d3.select("body")
@@ -58,28 +60,24 @@
                .attr("transform",
                      "translate(" + margin.left + "," + margin.top + ")");
 
-   // Get the data
-   var data = d3.csv("data/GISTEMPData.csv", function(error, data) {
+   // Scale the range of the data
+   x.domain(d3.extent(data, function(d) { return d.x; }));
+   y.domain(d3.extent(data, function(d) { return d.y; }));
 
-     // Scale the range of the data
-     x.domain(d3.extent(data, function(d) { return parseDate(d.Year); }));
-     y.domain(d3.extent(data, function(d) { return d.Glob; }))
+   // Add the X Axis
+   svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
 
-     // Add the valueline path.
-     svg.append("path")
-        .attr("class", "line")
-        .attr("d", valueline(data));
+   // Add the Y Axis
+   svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis);
 
-     // Add the X Axis
-     svg.append("g")
-        .attr("class", "x axis")
-        .attr("transform", "translate(0," + height + ")")
-        .call(xAxis);
-
-     // Add the Y Axis
-     svg.append("g")
-        .attr("class", "y axis")
-        .call(yAxis);
-   });
+   // Add the valueline path.
+   svg.append("path")
+      .attr("class", "line")
+      .attr("d", valueline(data));
   </script>
 </body>
