--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@ path {
    stroke: #1f77b4;
 }
 
+.glob-legend {
+   fill: #1f77b4;
+}
+
 .nhem {
    stroke: #FF7F0E;
 }
 
+.nhem-legend {
+   fill: #FF7F0E;
+}
+
 .shem {
    stroke: #2ca04e;
+}
+
+.shem-legend {
+   fill: #2ca04e;
 }
 
 .axis path,
@@ -130,6 +142,14 @@ path {
         .attr("class", "glob")
         .attr("d", valueline(glob_data));
 
+     // Title
+     svg.append("text")
+        .attr("class", "axis-label")
+        .attr("text-anchor", "middle")
+        .attr("x", width / 2)
+        .attr("y", 0)
+        .text("Mean Temperature by Hemisphere");
+
      // Add the valueline path for northern hemisphere mean
      svg.append("path")
         .attr("class", "nhem")
@@ -139,6 +159,52 @@ path {
      svg.append("path")
         .attr("class", "shem")
         .attr("d", valueline(shem_data));
+
+     // Add legend
+     var legend = svg.append("g")
+                     .attr("class", "legend")
+                     .attr("transform", "translate(20,20)")
+
+     // How far away circles are in legend
+     var circle_spacing = 160;
+
+     var glob_legend = legend.append("g");
+
+     glob_legend.append("text")
+                .attr("x", 0)
+                .attr("y", 0)
+                .text("Global Mean");
+
+     glob_legend.append("circle")
+                .attr("class", "glob-legend")
+                .attr("cx", circle_spacing)
+                .attr("cy", -4)
+                .attr("r", 6);
+
+     var shem_legend = legend.append("g")
+                             .attr("transform", "translate(0,14)");
+
+     shem_legend.append("text")
+                .text("Southern Hemisphere Mean");
+
+     shem_legend.append("circle")
+                .attr("class", "shem-legend")
+                .attr("cx", circle_spacing)
+                .attr("cy", -4)
+                .attr("r", 6);
+
+     var nhem_legend = legend.append("g")
+                             .attr("transform", "translate(0,28)");
+
+     nhem_legend.append("text")
+           .text("Northern Hemisphere Mean");
+
+     nhem_legend.append("circle")
+                .attr("class", "nhem-legend")
+                .attr("cx", circle_spacing)
+                .attr("cy", -4)
+                .attr("r", 6);
+
    });
   </script>
 </body>
