Add explaining paragraph

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8">
 <style>
-body { font: 12px Arial;}
+body { font: 14px Arial;}
 
 path {
     stroke-width: 2;
@@ -58,10 +58,18 @@ svg {
 .axis-label {
    font-size: 16px;
 }
+
+.info {
+   width: 800px;
+}
 </style>
 <body>
   <center>
-  <h1>GISTEMP Visualization</h1>
+    <div class="info">
+      <h1>GISTEMP Visualization</h1>
+      <p>
+        This data comes from the <a href="http://data.giss.nasa.gov/gistemp/">GISS Surface Temperature Analysis</a> The X Axis is the Year, and the Y Axis is the Mean Temperature. Only the data on the overall surface temperature and both of the hemispheres were used. Mouseover the legend to view only that value. From this data we can see a clear increasing trend of mean temperature over time.
+      </p>
   </center>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
@@ -210,7 +218,7 @@ svg {
                      .attr("transform", "translate(20,20)")
 
      // How far away circles are in legend
-     var circle_spacing = 160;
+     var circle_spacing = 200;
 
      var glob_legend = legend.append("g")
                              .on("mouseover", mouseLegendGlob)
