--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@ svg {
    width: 800px;
 }
 </style>
+<head>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-45937616-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
 <body>
   <center>
     <div class="info">
